# YEngine

./: CMakeLists.txt  README.md  appveyor.yml
apps/glfw/: CMakeLists.txt  ToDo.txt
apps/theMachine/: CMakeLists.txt
apps/theMachine/shaders/vk/: How to generate spirv byte code.txt  frag.spv
apps/theMachine/src/: Application.cpp  Application.h  CFileReader.cpp  CGLCanvas.cpp  CGLCanvas.h  CRenderTimer.cpp  CRenderTimer.h  CRenderer.cpp  CRenderer.h  CRendererManager.cpp  CRendererManager.h  CSettingsWindow.cpp  CSettingsWindow.h  CVkBuffer.cpp  CVkBuffer.hpp  CVkCommon.hpp  CVkDevice.cpp  CVkDevice.hpp  CVkFramebuffer.cpp  CVkFramebuffer.hpp  CVkInstance.cpp  CVkInstance.h  CVkShader.cpp  CVkShader.hpp  CVkSwapChain.hpp  CVulkan.cpp  CVulkan.h  CVulkanCanvas.cpp  CVulkanCanvas.h  CVulkanException.h  ERenderingWorkshop.h  MainWindow.cpp  MainWindow.h  RendererFactory.cpp  RendererFactory.h
apps/theMachine/src/workshop/: CTest.h
apps/theMachine/workshop/: CModuleBase.cpp  CModuleBase.h
apps/theMachine/workshop/2d_square/: TwoDSquare.cpp  TwoDSquare.h  frag.spv  shader.frag  shader.vert  vert.spv
apps/theMachine/workshop/2d_square/gl/: shader.frag  shader.vert
apps/theMachine/workshop/cdlod_terrain/: Grid.cpp  Grid.h  HeightMap.cpp  HeightMap.h  QuadTreeNode.cpp  QuadTreeNode.h  TerrainCDLOD.cpp  TerrainCDLOD.h
apps/theMachine/workshop/cdlod_terrain/shaders/: terrainArea.fs  terrainArea.vs  terrainSimple.fs  terrainSimple.vs
apps/theMachine/workshop/cube/: CubeTest.cpp  CubeTest.h  shader.frag  shader.vert
apps/theMachine/workshop/cube/gl/: shader.vert
apps/theMachine/workshop/obj_loading/: ObjLoadingTest.cpp  ObjLoadingTest.h  shader.frag  shader.vert
apps/theMachine/workshop/obj_loading/vk/: shader.vert
apps/theMachine/workshop/vk_2d_square/: shader.frag  vkSquare.cpp  vkSquare.h
apps/vk_wxWidget/: CMakeLists.txt
apps/vk_wxWidget/src/: VulkanCanvas.cpp  VulkanCanvas.h  VulkanWindow.cpp  VulkanWindow.h  wxVulkanTutorialApp.cpp
apps/wxWidget/: CMakeLists.txt  README.txt
apps/wxWidget/shaders/: shader.frag  shader.vert
apps/wxWidget/shaders/vk/: shader.frag
apps/wxWidget/src/: Application.cpp  CGLCanvas.cpp  CGLCanvas.h  CRenderTimer.cpp  CRenderTimer.h  CVulkanException.cpp  CVulkanException.h  GLCanvas.cpp  GLCanvas.h  MainCanvas.cpp  MainCanvas.h  MainWindow.cpp  MainWindow.h  RenderTimer.cpp  RenderTimer.h
cmake/modules/: FindASSIMP.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindSOIL.cmake
media/axis/: axisXYZ.mtl
projectExamples/: ToREAD.txt
projectExamples/glfw/: CMakeLists.txt
projectExamples/glfw/cmake/modules/: FindGLEW.cmake  FindGLFW3.cmake
projectExamples/glfw/shaders/: simple.frag
projectExamples/qt/: mainwindow.cpp  mainwindow.h
projectExamples/wxWidget/: wxWidgets-wxWidgets- Cross-Platform GUI Library - Report issues here- http---trac.wxwidgets.org-.url
projectExamples/wxWidget/src/: Application.h
projects/glfw/: CMakeLists.txt  README.txt
projects/glfw/shaders/: simple.vert
projects/glfw/src/: Shader.h  main.cpp
projects/qt/: CMakeLists.txt  README.md  main.cpp
projects/vk_wxWidget/: CMakeLists.txt  README.txt
projects/vk_wxWidget/src/: VulkanCanvas.h  wxVulkanTutorialApp.cpp
projects/wxWidget/: CMakeLists.txt  README.txt
projects/wxWidget/src/: Application.cpp  MainCanvas.cpp  MainWindow.cpp  MainWindow.h
src/yengine/core/: CGraphicDriver.h  CShader.h
src/yengine/core/gl/: CGLDriver.cpp  CGLSLShader.cpp  CGLSLShader.h  CGLShaderFactory.h
src/yengine/core/vk/: CVKDriver.cpp  CVKDriver.h  CVKShaderFactory.h  CVkCommon.hpp  CVkDevice.cpp  CVkDevice.hpp  CVkFramebuffer.hpp  CVkInstance.cpp  CVkInstance.h  CVkShader.hpp  CVkSwapChain.hpp  CVulkan.cpp  CVulkan.h  CVulkanException.h
src/yengine/helpers/: StringsHelper.cpp
src/yengine/image/: CTexture.cpp  CTexture.h  CTextureManager.cpp  CTextureManager.h
src/yengine/scene/: CCamera.cpp  CCamera.h  CMaterial.cpp  CMesh.cpp  CModel.cpp  CModel.h  CObjFile.h  CObject.cpp  CObject.h  CScene.cpp
src/yengine/system/: CFileReader.h  CmdHandling.cpp  CmdHandling.h  FileSystem.h
tools/: shader.frag
yengine/: CGLSLShaderProgram.cpp  CGLSLShaderProgram.h  CGLShaderFactory.h  CShaderFactory.h  CShaderProgram.h  Camera.cpp  Camera.h  Object.cpp  Object.h  Shader.h
yengine/core/: CGraphicDriver.cpp  CGraphicDriver.h  CShader.h
yengine/core/gl/: CGLDriver.cpp  CGLDriver.h  CGLSLShader.h  CGLSLShaderProgram.h
yengine/core/vk/: CVKDriver.cpp  CVKDriver.h
yengine/helpers/: StringsHelper.h
yengine/image/: CTexture.cpp  CTexture.h  CTextureManager.h  IBmp.cpp  IBmp.h
yengine/scene/: CCamera.cpp  CCamera.h  CMaterial.cpp  CMaterial.h  CMesh.cpp  CMesh.h  CModel.cpp  CModel.h  CObjFile.cpp  CObjFile.h  CObject.cpp  CObject.h  CScene.cpp  CScene.h
yengine/system/: FileSystem.cpp  FileSystem.h
yengine/test/: CTest.cpp  CTest.h
